Bug 409417 - When using Bluetooth for internet connection, the same icon is used for the network and the bluetooth manager
Summary: When using Bluetooth for internet connection, the same icon is used for the n...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on: 472429
Blocks:
  Show dependency treegraph
 
Reported: 2019-07-02 13:35 UTC by Raphaël Jakse
Modified: 2024-12-23 18:25 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raphaël Jakse 2019-07-02 13:35:37 UTC
SUMMARY

When using Bluetooth for internet connection, the same icon is used for the network and the bluetooth manager. This is a bit confusing

STEPS TO REPRODUCE
1. Connect to Internet using Bluetooth (shared from a phone, for instance)

OBSERVED RESULT

The network and the Bluetooth manager both get the same icon, the Bluetooth logo with a dotted line in the middle.

EXPECTED RESULT

The two managers should use a different icon so they can be distinguished.
Comment 1 Justin Zobel 2020-11-19 22:51:01 UTC
Confirmed on 5.20.3, this needs improving, it shows two bluetooth icons. It would be nice if the internet connection one was differentiated to show that it is a network or internet connection for instance a globe behind the BT icon.
Comment 2 Nate Graham 2020-11-19 23:57:42 UTC
We will probably need a new icon too.
Comment 3 Martino Fontana 2022-06-26 21:11:23 UTC
Still a problem on Plasma 5.25.
Comment 4 Bug Janitor Service 2023-08-04 16:07:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/276
Comment 5 Ismael Asensio 2023-08-05 13:58:08 UTC
Git commit 50b22608329692b6678c1057736f188977474030 by Ismael Asensio.
Committed on 05/08/2023 at 14:58.
Pushed by iasensio into branch 'master'.

Use specific icon for shared bluetooth connection

The icon `network-wireless-bluetooth` represents better the
concept of network connection via bluetooth, and doesn't
get confused with the regular bluetooth icon.
FIXED-IN: 6

M  +2    -2    libs/declarative/connectionicon.cpp
M  +1    -1    libs/editor/uiutils.cpp
M  +1    -5    libs/models/networkmodelitem.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/50b22608329692b6678c1057736f188977474030
Comment 6 Ben Cooksley 2024-12-23 18:25:52 UTC
Bulk transfer as requested in T17796