Use specific icon for shared bluetooth connection

The icon `network-wireless-bluetooth` represents better the
concept of network connection via bluetooth, and doesn't
get confused with the regular bluetooth icon.

BUG: 409417
FIXED-IN: 6