libs/declarative/connectionicon.cpp
@@ -359,8 +359,8 @@ void ConnectionIcon::setIcons()
                     if (btDevice->bluetoothCapabilities().testFlag(NetworkManager::BluetoothDevice::Dun)) {
                         setModemIcon(device);
                     } else {
-                        setConnectionIcon(QStringLiteral("network-bluetooth-activated"));
-                        setConnectionTooltipIcon(QStringLiteral("preferences-system-bluetooth"));
+                        setConnectionIcon(QStringLiteral("network-wireless-bluetooth-symbolic"));
+                        setConnectionTooltipIcon(QStringLiteral("network-wireless-bluetooth"));
                     }
                 }
             } else if (type == 29) { // TODO change to WireGuard enum value once it is added
